k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: latency-monitor
  labels:
    app: latency-monitor
    app.kubernetes.io/name: latency-monitor
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: latency-monitor
